# lust-lang

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  build_wasm.sh  count_tokens  disassemble2.txt  jit_corruption_bug.md  lust-config.toml  test.lust
benchmarks/: fib.lust  fib.py  run_benchmark.sh
benchmarks/field_iteration/: benchmark.lua  benchmark.lust  benchmark.py  benchmark.rhai  benchmark.wren
benchmarks/numeric_iteration/: benchmark.lua  benchmark.lust  benchmark.py  benchmark.rhai  benchmark.wren
crates/lust-analyzer/: Cargo.toml  README.md
crates/lust-analyzer/src/: analysis.rs  backend.rs  diagnostics.rs  main.rs  semantic_tokens.rs  tests.rs  utils.rs
crates/lust-analyzer/src/backend/: completions.rs  hover.rs  inlay_hints.rs  mod.rs  server.rs  tests.rs
crates/lust-macros/: Cargo.toml  README.md
crates/lust-macros/src/: lib.rs
examples/: embed.rs  run_all.sh
examples/advanced/: 01_type_narrowing.lust  02_is_operator_test.lust  03_match_type_patterns.lust  04_type_system_comprehensive.lust  05_union_types.lust  06_unknown_types.lust  07_tasks_cooperative.lust  08_ref_structs.lust
examples/basic/: 01_hello.lust  02_variables.lust  03_functions.lust  04_structs.lust  05_enums.lust  06_option.lust  07_result.lust  08_arrays.lust  09_strings.lust  10_maps.lust  11_tables.lust  11_type_casting.lust  12_loops.lust  12_type_casting.lust  13_break_continue.lust  14_closures.lust  16_functional.lust  16_math.lust  17_destructuring.lust  18_io.lust  19_os.lust  lust-config.toml
examples/c-ffi/: README.md  lust_ffi_example  main.c
examples/lua_c_api/: lust-config.toml  main.lust
examples/lua_c_api/externs/: ltn12.lust  mime.lust  socket.lust
examples/lua_c_api/externs/mime/: core.lust
examples/lua_c_api/externs/socket/: core.lust  ftp.lust  headers.lust  http.lust  smtp.lust  tp.lust  url.lust
examples/lua_c_api/externs/ssl/: https.lust
examples/modules/: main.lust
examples/modules/lib/: math.lust
examples/modules/lib/math/: vector.lust
examples/programs/: profile_cli.lust
examples/rust-extension/: README.md  lust-config.toml  main.lust
examples/rust-extension/extensions/double/: Cargo.toml
examples/rust-extension/extensions/double/src/: lib.rs
examples/rust-extension/extensions/triple/: Cargo.toml
examples/rust-extension/extensions/triple/src/: lib.rs
examples/rust-extension/externs/: lust_double.lust  lust_triple.lust
examples/rust-extension/externs/lust_double/: nested.lust
examples/traits/: 00_simple_trait.lust  01_basic_trait.lust  02_trait_bounds.lust  03_tostring_concat.lust  04_trait_narrowing.lust  05_trait_casting.lust
include/: lust_ffi.h
profiles/: profile.txt
src/: config.rs  embed.rs  error.rs  externs.rs  ffi.rs  intern.rs  lazy.rs  lib.rs  main.rs  number.rs  wasm.rs
src/ast/: expr.rs  items.rs  mod.rs  stmt.rs  types.rs
src/builtins/: mod.rs
src/bytecode/: chunk.rs  instruction.rs  mod.rs  value.rs
src/bytecode/compiler/: closures.rs  expressions.rs  methods.rs  mod.rs  module.rs  patterns.rs  registers.rs  statements.rs
src/embed/: async_runtime.rs  conversions.rs  mod.rs  native_types.rs  program.rs  values.rs
src/jit/: mod.rs  optimizer.rs  profiler.rs  trace.rs
src/jit/codegen/: arithmetic.rs  builder.rs  comparisons.rs  guards.rs  logic.rs  memory.rs  mod.rs  registers.rs  specialization.rs
src/jit/codegen_rv32/: arithmetic.rs  builder.rs  comparisons.rs  guards.rs  logic.rs  memory.rs  mod.rs  registers.rs  specialization.rs
src/jit/specialization/: mod.rs
src/lexer/: lexer_impl.rs  mod.rs  token.rs
src/lua_compat/: mod.rs  transpile.rs
src/modules/: embedded.rs  mod.rs
src/parser/: expr_parser.rs  item_parser.rs  mod.rs  stmt_parser.rs  type_parser.rs
src/typechecker/: item_checker.rs  mod.rs  stmt_checker.rs  type_env.rs
src/typechecker/expr_checker/: collections.rs  entry.rs  mod.rs  operations.rs  patterns.rs
src/vm/: api.rs  budget.rs  corelib.rs  cycle.rs  execution.rs  mod.rs  stdlib.rs  task.rs  tasks.rs  tracing.rs
tree-sitter-lust/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  install.sh  package.json  test.lust  test2.lust  tree-sitter.json
tree-sitter-lust/queries/: highlights.scm
vsc-extension/: CHANGELOG.md  README.md  lust-analyzer-0.0.1.vsix  package-lock.json  package.json
vsc-extension/src/: extension.ts
