[workspace]
members = [".", "crates/lust-analyzer"]
exclude = ["examples/rust-extension/extensions/**"]

[package]
name = "lust-rs"
version = "1.3.7"
edition = "2021"
include = ["src/**", "include/**", "Cargo.toml", "README.md", "LICENSE"]
license-file = "LICENSE"
readme = "README.md"
keywords = [
  "scripting",
  "scripting-language",
  "scripting-engine",
  "embedded",
  "lust",
]
categories = [
  "parser-implementations",
  "compilers",
  "development-tools",
  "embedded-development",
  "webassembly",
]
description = "A WIP Lua-like scripting language implemented in Rust, designed for embedding and rapid scripting with a strong type system, with trace-based JIT."
homepage = "https://lust-lang.dev/"

[lib]
name = "lust"
crate-type = ["rlib", "cdylib"]

[features]
default = ["packages"]
packages = ["libloading", "dirs"]

[[bin]]
name = "lust"
path = "src/main.rs"

[dependencies]
dynasmrt = "4.0.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
libloading = { version = "0.8.3", optional = true }
dirs = { version = "6.0.0", optional = true }

[build-dependencies]
dynasm = "4.0.1"

[dev-dependencies]
tempfile = "3.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.81", features = ["console"] }

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
