[workspace]
members = [".", "crates/lust-analyzer", "crates/lust-macros"]
exclude = ["examples/rust-extension/extensions/**"]

[package]
name = "lust-rs"
version = "2.1.2"
edition = "2021"
include = ["src/**", "include/**", "Cargo.toml", "README.md", "LICENSE"]
license-file = "LICENSE"
readme = "README.md"
keywords = [
  "scripting",
  "scripting-language",
  "scripting-engine",
  "embedded",
  "lust",
]
categories = [
  "parser-implementations",
  "compilers",
  "development-tools",
  "wasm",
]
description = "A WIP Lua-like scripting language implemented in Rust, designed for embedding and rapid scripting with a strong type system, with trace-based JIT."
homepage = "https://lust-lang.dev/"

[lib]
name = "lust"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std", "packages"]
std = [
  "dep:dynasmrt",
  "dep:toml",
  "serde/std",
  "thiserror/std",
  "dep:lust-macros",
]
libloading = ["std", "dep:libloading"]
dirs = ["std", "dep:dirs"]
packages = ["std", "libloading", "dirs"]

[[bin]]
name = "lust"
path = "src/main.rs"
required-features = ["std"]

[dependencies]
dynasmrt = { version = "4.0.1", optional = true }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = { version = "2.0.17", default-features = false }
toml = { version = "0.9.8", optional = true }
libloading = { version = "0.8.3", optional = true }
dirs = { version = "6.0.0", optional = true }
hashbrown = { version = "0.16.0", default-features = false, features = [
  "default-hasher",
  "equivalent",
] }
libm = { version = "0.2.8", default-features = false }
lust-macros = { path = "crates/lust-macros", optional = true }

[build-dependencies]
dynasm = "4.0.1"

[dev-dependencies]
tempfile = "3.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.81", features = ["console"] }

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
