[package]
name = "lust-analyzer"
version = "0.4.28"
edition = "2021"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["lust", "language-server", "lsp"]
categories = ["development-tools", "development-tools::debugging"]
description = "A WIP implementation of the language server protocol (LSP) for the Lust programming language"
homepage = "https://lust-lang.dev/"

[dependencies]
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
] }
tower-lsp = "0.20.0"
url = "2.5.7"
lust = { path = "../..", version = "3.4.14", package = "lust-rs" }
hashbrown = { version = "0.16.0", default-features = false, features = [
  "default-hasher",
  "equivalent",
] }
