[package]
name = "lust-macros"
version = "0.1.1"
edition = "2021"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]
license-file = "LICENSE"
readme = "README.md"
keywords = ["lust", "macros"]
categories = ["development-tools"]
description = "Procedural macros for the Lust programming language"
homepage = "https://lust-lang.dev/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }
